--- a/index.html
+++ b/index.html
@@ -1,24 +1,25 @@
 <html>
 <head>
-    <title>Christian D'Souza</title>
+    <title>Christian D'Souza | Home</title>
     <link rel="stylesheet" href="style.css">
 </head>
   
 <body>
-    <div class="title">
-        Christian D'Souza
-        <a href="#contact">Contact</a>
-        <a href="#resume">Resume</a>
-        <a href="#about">About Me</a>
-        <a href="#home">Home</a>
+    <div class="menu">
+        <a href="index.html">Christian D'Souza</a>
+        <span class="links">
+            <a href="contact.html">Contact</a>
+            <a href="resume.html">Resume</a>
+            <a href="projects.html">Projects</a>
+            <a href="about.html">About Me</a>
+        </span>
     </div>
 
     <div class="main">
         <h2> Welcome to my portfolio! </h2>
+        <img src="images/portfolio.jpg" alt="Main Picture" style="width:15%">
+        <p>I'm Christian D'Souza, a 21 year-old Computer Science student at Queen's University.</p>
     <div>
-
-    <img src="https://scontent.fyto1-1.fna.fbcdn.net/v/t39.30808-1/311150901_5393090110787258_1981337002457830055_n.jpg?stp=dst-jpg_s200x200&_nc_cat=105&ccb=1-7&_nc_sid=5740b7&_nc_ohc=knd-PzCyMwwAX8pHWG0&_nc_ht=scontent.fyto1-1.fna&oh=00_AfBeCr2030FsXPaA6bhgo37VqwgMTyXfwPvLvqIzPW4c0g&oe=65DFE63F" alt="Paris" style="width:15%">
-    <p>I'm Christian D'Souza, a 21 year-old Computer Science student at Queen's University.</p>
 </body>
 
 </html>
