Hobbies/Activities Text
Finished writing text for hobbies/activites in About Me page

--- a/pages/about.html
+++ b/pages/about.html
@@ -22,10 +22,18 @@
     <div class="content">
         <h3>Hobbies/Activities</h3>
         <img src="./../images/grade9tennis.jpg" alt="YRAA Champion" style="width:17.5%; float:left">
-        <p>My favourite sport is tennis! I have been playing tennis since I was 7 
+        <p>
+        Playing sports is one of the ways I try to maintain a healthy
+        lifestyle. My competitive nature allows me to have a good time when 
+        playing sports, and motivates me to stay energized and active. My 
+        interest in fitness has also influenced me to go to the gym consistently.
+        </p>
+        <p>
+        My favourite sport is tennis! I have been playing tennis since I was 7 
         years old, and have enjoyed training and competing. To this day, I still 
         closely follow the sport and have feen fortunate enough to watch some 
-        professionals compete live! My favourite player is Roger Federer.</p>
+        professionals compete live! My favourite player is Roger Federer.
+        </p>
     </div>
 </body>
 
