--- a/pages/about.html
+++ b/pages/about.html
@@ -31,7 +31,7 @@
         <p>
         My favourite sport is tennis! I have been playing tennis since I was 7 
         years old, and have enjoyed training and competing. To this day, I still 
-        closely follow the sport and have feen fortunate enough to watch some 
+        closely follow the sport and have been fortunate enough to watch some 
         professionals compete live! My favourite player is Roger Federer.
         </p>
     </div>
