--- a/pages/index.html
+++ b/pages/index.html
@@ -1,5 +1,7 @@
 <html>
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, inital-scale=1.0">
     <title>Christian D'Souza | Home</title>
     <link rel="stylesheet" href="./../style.css">
 </head>
