--- a/pages/index.html
+++ b/pages/index.html
@@ -1,5 +1,7 @@
 <html>
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Christian D'Souza | Home</title>
     <link rel="stylesheet" href="./../style.css">
 </head>
@@ -17,9 +19,9 @@
 
     <div class="main">
         <h2> Welcome to my portfolio! </h2>
-        <img src="./../images/portfolio.jpg" alt="Main Picture" style="width:15%">
+        <img src="./../images/portfolio.jpg" alt="Main Picture">
         <p>I'm Christian D'Souza, a 21 year-old Computer Science student at Queen's University.</p>
-    <div>
+    </div>
 </body>
 
 </html>
