--- a/pages/index.html
+++ b/pages/index.html
@@ -7,16 +7,18 @@
 </head>
   
 <body>
-    <div class="menu">
-        <a href="index.html">Christian D'Souza</a>
-        <span class="links">
-            <a href="contact.html">Contact</a>
-            <a href="resume.html">Resume</a>
-            <a href="projects.html">Projects</a>
-            <a href="about.html">About Me</a>
-        </span>
-    </div>
 
+    <div class="row">
+        <div class="menu">
+            <a href="index.html">Christian D'Souza</a>
+        </div>
+
+        <a href="contact.html">Contact</a>
+        <a href="projects.html">Projects</a>
+        <a href="resume.html">Resume</a>
+        <a href="about.html">About</a>
+    </div>
+    
     <div class="main">
         <h2> Welcome to my portfolio! </h2>
         <img src="./../images/portfolio.jpg" alt="Main Picture">
