--- a/pages/resume.html
+++ b/pages/resume.html
@@ -5,14 +5,15 @@
 </head>
   
 <body>
-    <div class="menu">
-        <a href="index.html">Christian D'Souza</a>
-        <span class="links">
-            <a href="contact.html">Contact</a>
-            <a href="resume.html" style="text-decoration:underline;">Resume</a>
-            <a href="projects.html">Projects</a>
-            <a href="about.html">About Me</a>
-        </span>
+    <div class="row">
+        <div class="menu">
+            <a href="index.html">Christian D'Souza</a>
+        </div>
+
+        <a href="contact.html">Contact</a>
+        <a href="projects.html">Projects</a>
+        <a href="resume.html">Resume</a>
+        <a href="about.html">About</a>
     </div>
 
     <div class="topic">
