--- a/pages/projects.html
+++ b/pages/projects.html
@@ -11,7 +11,7 @@
         </div>
 
         <a href="contact.html">Contact</a>
-        <a href="projects.html">Projects</a>
+        <a href="projects.html" style="text-decoration: underline;">Projects</a>
         <a href="resume.html">Resume</a>
         <a href="about.html">About</a>
     </div>
