Updated age, no longer 21 ;_;

--- a/pages/about.html
+++ b/pages/about.html
@@ -13,7 +13,7 @@
         <a href="contact.html">Contact</a>
         <a href="projects.html">Projects</a>
         <a href="resume.html">Resume</a>
-        <a href="about.html" style="text-decoration: underline;">About</a>
+        <a href="about.html" style="text-decoration: underline; background-color: plum;">About</a>
     </div>
 
     <div class="topic">
