--- a/pages/contact.html
+++ b/pages/contact.html
@@ -10,7 +10,7 @@
             <a href="index.html">Christian D'Souza</a>
         </div>
 
-        <a href="contact.html" style="text-decoration: underline;">Contact</a>
+        <a href="contact.html" style="text-decoration: underline;  background-color: plum;">Contact</a>
         <a href="projects.html">Projects</a>
         <a href="resume.html">Resume</a>
         <a href="about.html">About</a>
