--- a/pages/resume.html
+++ b/pages/resume.html
@@ -12,7 +12,7 @@
 
         <a href="contact.html">Contact</a>
         <a href="projects.html">Projects</a>
-        <a href="resume.html" style="text-decoration: underline;">Resume</a>
+        <a href="resume.html" style="text-decoration: underline;  background-color: plum;">Resume</a>
         <a href="about.html">About</a>
     </div>
 
