--- a/pages/about.html
+++ b/pages/about.html
@@ -20,20 +20,34 @@
         <h2>About Me</h2>
     </div>
     
-    <div class="content">
+    <div class="content_1">
         <h3>Hobbies/Activities</h3>
         <img src="./../images/grade9tennis.jpg" alt="YRAA Champion" style="width:17.5%; float:left">
         <p>
-        Playing sports is one of the ways I try to maintain a healthy
-        lifestyle. My competitive nature allows me to have a good time when 
-        playing sports, and motivates me to stay energized and active. My 
-        interest in fitness has also influenced me to go to the gym consistently.
+            Playing sports is one of the ways I try to maintain a healthy
+            lifestyle. My competitive nature allows me to have a good time when 
+            playing sports, and motivates me to stay energized and active. My 
+            interest in fitness has also influenced me to go to the gym consistently.
         </p>
         <p>
-        My favourite sport is tennis! I have been playing tennis since I was 7 
-        years old, and have enjoyed training and competing. To this day, I still 
-        closely follow the sport and have been fortunate enough to watch some 
-        professionals compete live! My favourite player is Roger Federer.
+            My favourite sport is tennis! I have been playing tennis since I was 7 
+            years old, and have enjoyed training and competing. To this day, I still 
+            follow the sport closely, and have been fortunate to watch some of my
+            favourite players compete live! My favourite player is Roger Federer.
+        </p>
+    </div>
+    <div class="content_2">
+        <img src="./../images/guitar.png" alt="Guitar" style="width:17.5%; float:right">
+        <p>
+            Music has been a great addition to my past-time activities since I was a teenager. I enjoy
+            listening to music on bike rides and long drives, and it often helps me focus when I'm studying or
+            working out.
+            I've been playing the guitar since I was in high school and enjoy jamming with friends.
+        </p>
+        <p>
+            Some of my preferred genres are Rock/Pop Punk. I take plenty of inspiration from well-known
+            bands such as Queen, Green Day, and blink-182, as well as modern bands such 
+            as Neck Deep and WSTR.
         </p>
     </div>
 </body>
