Updated contact page

--- a/pages/about.html
+++ b/pages/about.html
@@ -42,7 +42,7 @@
             Music has been a great addition to my past-time activities since I was a teenager. I enjoy
             listening to music on bike rides and long drives, and it often helps me focus when I'm studying or
             working out.
-            I've been playing the guitar since I was in high school and enjoy jamming with friends.
+            I've been playing the guitar since I was in high school and enjoy getting together for jams.
         </p>
         <p>
             Some of my preferred genres are Rock/Pop Punk. I take plenty of inspiration from well-known
