--- a/pages/contact.html
+++ b/pages/contact.html
@@ -17,7 +17,27 @@
     </div>
 
     <div class="topic">
-        <h2>Contact Me!</h2>
+        <h2>Contact Me!</h2>        
+    </div>
+
+    <div style="text-align: center;">
+        <p style="padding-left: 0px; padding-top: 100px;">Here are some links to my socials:</p>
+    </div>
+
+    <div class="contact">
+        <a href="https://linktr.ee/christiandsouza">
+            <img src="./../images/linkedin_logo.png" alt="LinkedIn" style="width:200px;">
+        </a>
+        <a href="https://github.com/christian-dsouza">
+            <img src="./../images/github_logo.png" alt="GitHub" style="width:200px;">
+        </a>
+        <a href="https://linktr.ee/christiandsouza">
+            <img src="./../images/linktree_logo.png" alt="LinkTree" style="width:200px;">
+        </a>
+    </div>
+
+    <div style="text-align: center;">
+        <p style="padding-left: 0px;">You can also email me at christian.dsouza06@gmail.com</p>
     </div>
 </body>
 
