--- a/pages/resume.html
+++ b/pages/resume.html
@@ -19,6 +19,15 @@
     <div class="topic">
         <h2>Resume</h2>
     </div>
+    <center>
+        <embed
+        src="./../files/DSouza, Christian - RESUME.pdf"
+        type="application/pdf"
+        width="50%"
+        height="70%"
+    />
+    </center>
+    
 </body>
 
 </html>
