--- a/pages/contact.html
+++ b/pages/contact.html
@@ -21,18 +21,18 @@
     </div>
 
     <div style="text-align: center;">
-        <p style="padding-left: 0px; padding-top: 100px;">Here are some links to my socials:</p>
+        <p style="padding-left: 0px; padding-top: 50px;">Here are some links to my socials:</p>
     </div>
 
     <div class="contact">
         <a href="https://linktr.ee/christiandsouza">
-            <img src="./../images/linkedin_logo.png" alt="LinkedIn" style="width:200px;">
+            <img src="./../images/linkedin_logo.png" alt="LinkedIn" style="width:100%;">
         </a>
         <a href="https://github.com/christian-dsouza">
-            <img src="./../images/github_logo.png" alt="GitHub" style="width:200px;">
+            <img src="./../images/github_logo.png" alt="GitHub" style="width:100%;">
         </a>
         <a href="https://linktr.ee/christiandsouza">
-            <img src="./../images/linktree_logo.png" alt="LinkTree" style="width:200px;">
+            <img src="./../images/linktree_logo.png" alt="LinkTree" style="width:100%;">
         </a>
     </div>
 
