Laptop changes with updated About

--- a/pages/about.html
+++ b/pages/about.html
@@ -11,7 +11,7 @@
         </div>
 
         <a href="contact.html">Contact</a>
-        <a href="projects.html">Projects</a>
+        <!-- <a href="projects.html">Projects</a> -->
         <a href="resume.html">Resume</a>
         <a href="about.html" style="text-decoration: underline; background-color: plum;">About</a>
     </div>
@@ -21,15 +21,26 @@
     </div>
     
     <div class="content_1">
+        <h3 style="padding-bottom: 0%;">Who Am I?</h3>
+        <p style="padding-left: 0.5%; font-size: 110%;">
+            My name is Christian Ethan D'Souza. I was born on October 6th, 2002 in Dubai, UAE.
+            I moved to Vaughan, Canada when I was 11 years old and attended St. Elizabeth Catholic High School.
+            It was in Grade 9 when I was first introduced to coding, and since taking my first course
+            in Grade 10, I've never looked back. I've enjoyed the learning process in programming, and it
+            has certainly helped that my friends are developers themselves. I am currently in my fourth
+            year of Computing at Queen's University, the period I've learned most of my programming skills
+            from. I'm always thinking about the future, and I strive to make significant contributions to
+            any task I take part in.
+        </p>
         <h3>Hobbies/Activities</h3>
         <img src="./../images/grade9tennis.jpg" alt="YRAA Champion" style="width:19%; float:left">
-        <p>
+        <p style="font-size: 110%;">
             Playing sports is one of the ways I try to maintain a healthy
             lifestyle. My competitive nature allows me to have a good time when 
             playing sports, and motivates me to stay energized and active. My 
             interest in fitness has also influenced me to go to the gym consistently.
         </p>
-        <p>
+        <p style="font-size: 110%;">
             My favourite sport is tennis! I have been playing tennis since I was 7 
             years old, and have enjoyed training and competing. To this day, I still 
             follow the sport closely, and have been fortunate to watch some of my
@@ -38,13 +49,13 @@
     </div>
     <div class="content_2">
         <img src="./../images/guitar.png" alt="Guitar" style="width:19%; float:right">
-        <p>
+        <p style="font-size: 110%;">
             Music has been a great addition to my past-time activities since I was a teenager. I enjoy
             listening to music on bike rides and long drives, and it often helps me focus when I'm studying or
             working out.
             I've been playing the guitar since I was in high school and enjoy getting together for jams.
         </p>
-        <p>
+        <p style="font-size: 110%;">
             Some of my preferred genres are Rock/Pop Punk. I take plenty of inspiration from well-known
             bands such as Queen, Green Day, and blink-182, as well as modern bands such 
             as Neck Deep and WSTR.
