--- a/pages/contact.html
+++ b/pages/contact.html
@@ -11,7 +11,7 @@
         </div>
 
         <a href="contact.html" style="text-decoration: underline;  background-color: plum;">Contact</a>
-        <a href="projects.html">Projects</a>
+        <!-- <a href="projects.html">Projects</a> -->
         <a href="resume.html">Resume</a>
         <a href="about.html">About</a>
     </div>
