--- a/pages/index.html
+++ b/pages/index.html
@@ -14,7 +14,7 @@
         </div>
 
         <a href="contact.html">Contact</a>
-        <a href="projects.html">Projects</a>
+        <!-- <a href="projects.html">Projects</a> -->
         <a href="resume.html">Resume</a>
         <a href="about.html">About</a>
     </div>
