Fixed LinkedIn url

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -25,7 +25,7 @@
     </div>
 
     <div class="contact">
-        <a href="https://linktr.ee/christiandsouza">
+        <a href="https://www.linkedin.com/in/christian-d-souza-6b9195218/">
             <img src="./../images/linkedin_logo.png" alt="LinkedIn" style="width:100%;">
         </a>
         <a href="https://github.com/christian-dsouza">
