--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Christian D'Souza | Home</title>
-    <link rel="stylesheet" href="./../style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
   
 <body>
@@ -13,15 +13,15 @@
             <a href="index.html">Christian D'Souza</a>
         </div>
 
-        <a href="contact.html">Contact</a>
+        <a href="pages/contact.html">Contact</a>
         <!-- <a href="projects.html">Projects</a> -->
-        <a href="resume.html">Resume</a>
-        <a href="about.html">About</a>
+        <a href="pages/resume.html">Resume</a>
+        <a href="pages/about.html">About</a>
     </div>
     
     <div class="main">
-        <h2> Welcome to my portfolio! </h2>
-        <img src="./../images/portfolio.jpg" alt="Main Picture">
+        <h2 style="padding: 2%;"> Welcome to my portfolio! </h2>
+        <img src="./images/portfolio.jpg" alt="Main Picture">
         <p>I'm Christian D'Souza, a 22 year-old Computer Science student at Queen's University.</p>
     </div>
 </body>
