--- a/pages/about.html
+++ b/pages/about.html
@@ -7,7 +7,7 @@
 <body>
     <div class="row">
         <div class="menu">
-            <a href="index.html">Christian D'Souza</a>
+            <a href="./../index.html">Christian D'Souza</a>
         </div>
 
         <a href="contact.html">Contact</a>
@@ -17,7 +17,7 @@
     </div>
 
     <div class="topic">
-        <h2>About Me</h2>
+        <h2 style="padding: 1%;">About Me</h2>
     </div>
     
     <div class="content_1">
