--- a/pages/contact.html
+++ b/pages/contact.html
@@ -7,7 +7,7 @@
 <body>
     <div class="row">
         <div class="menu">
-            <a href="index.html">Christian D'Souza</a>
+            <a href="./../index.html">Christian D'Souza</a>
         </div>
 
         <a href="contact.html" style="text-decoration: underline;  background-color: plum;">Contact</a>
@@ -17,7 +17,7 @@
     </div>
 
     <div class="topic">
-        <h2>Contact Me!</h2>        
+        <h2 style="padding: 1%;">Contact Me!</h2>        
     </div>
 
     <div style="text-align: center;">
