--- a/pages/projects.html
+++ b/pages/projects.html
@@ -17,7 +17,7 @@
     </div>
     
     <div class="topic">
-        <h2>Projects</h2>
+        <h2 style="padding: 1%;">Projects</h2>
     </div>
 </body>
 
