--- a/pages/resume.html
+++ b/pages/resume.html
@@ -7,7 +7,7 @@
 <body>
     <div class="row">
         <div class="menu">
-            <a href="index.html">Christian D'Souza</a>
+            <a href="./../index.html">Christian D'Souza</a>
         </div>
 
         <a href="contact.html">Contact</a>
@@ -17,7 +17,7 @@
     </div>
 
     <div class="topic">
-        <h2>Resume</h2>
+        <h2 style="padding: 1%;">Resume</h2>
     </div>
     <center>
         <embed
