Updated homepage link with pages link

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -7,7 +7,7 @@
 <body>
     <div class="row">
         <div class="menu">
-            <a href="./../index.html">Christian D'Souza</a>
+            <a href="https://christian-dsouza.github.io/">Christian D'Souza</a>
         </div>
 
         <a href="contact.html" style="text-decoration: underline;  background-color: plum;">Contact</a>
