--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <div class="row">
         <div class="menu">
-            <a href="index.html">Christian D'Souza</a>
+            <a href="https://christian-dsouza.github.io/">Christian D'Souza</a>
         </div>
 
         <a href="pages/contact.html">Contact</a>
