--- a/pages/about.html
+++ b/pages/about.html
@@ -7,7 +7,7 @@
 <body>
     <div class="row">
         <div class="menu">
-            <a href="./../index.html">Christian D'Souza</a>
+            <a href="https://christian-dsouza.github.io/">Christian D'Souza</a>
         </div>
 
         <a href="contact.html">Contact</a>
