edit about - who am i

--- a/pages/about.html
+++ b/pages/about.html
@@ -23,8 +23,7 @@
     <div class="content_1">
         <h3 style="padding-bottom: 0%;">Who Am I?</h3>
         <p style="padding-left: 0.5%; font-size: 110%;">
-            My name is Christian Ethan D'Souza. I was born on October 6th, 2002 in Dubai, UAE.
-            I moved to Vaughan, Canada when I was 11 years old and attended St. Elizabeth Catholic High School.
+            My name is Christian Ethan D'Souza. I'm from Vaughan, Canada and attended St. Elizabeth Catholic High School.
             It was in Grade 9 when I was first introduced to coding, and since taking my first course
             in Grade 10, I've never looked back. I've enjoyed the learning process in programming, and it
             has certainly helped that my friends are developers themselves. I am currently in my fourth
