--- a/pages/resume.html
+++ b/pages/resume.html
@@ -21,7 +21,7 @@
     </div>
     <center>
         <embed
-        src="./../files/DSouza, Christian - RESUME.pdf"
+        src="./../files/ChristianDSouza - Resume.pdf"
         type="application/pdf"
         width="80%"
         height="70%"
