--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="main">
         <h2 style="padding: 2%;"> Welcome to my portfolio! </h2>
         <img src="./images/portfolio.jpg" alt="Main Picture">
-        <p>I'm Christian D'Souza, a 22 year-old Computer Science student at Queen's University.</p>
+        <p>I'm Christian D'Souza, a 22 year-old Computer Science graduate from Queen's University.</p>
     </div>
 </body>
 
