--- a/pages/about.html
+++ b/pages/about.html
@@ -26,9 +26,7 @@
             My name is Christian Ethan D'Souza. I'm from Vaughan, Canada and attended St. Elizabeth Catholic High School.
             It was in Grade 9 when I was first introduced to coding, and since taking my first course
             in Grade 10, I've never looked back. I've enjoyed the learning process in programming, and it
-            has certainly helped that my friends are developers themselves. I am currently in my fourth
-            year of Computing at Queen's University, the period I've learned most of my programming skills
-            from. I'm always thinking about the future, and I strive to make significant contributions to
+            has certainly helped that my friends are developers themselves. I have recently graduated at Queen's University with a degree in Computing. I'm always thinking about the future, and I strive to make significant contributions to
             any task I take part in.
         </p>
         <h3>Hobbies/Activities</h3>
